Archive2/f5/1450ac0eed8556/output
main.cpp:47:27: error: 'constexpr const bind_wrap<void(), ulong_ip_tag>::<lambda(void (*)(), ulong_ip_tag)> bind_wrap<void(), ulong_ip_tag>::deduce', declared using local type 'const bind_wrap<void(), ulong_ip_tag>::<lambda(void (*)(), ulong_ip_tag)>', is used but never defined [-fpermissive]
     constexpr static auto deduce = [](_Args...params){handler(params...);};
                           ^
